--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+	<script src="/js/jquery-ui.js"></script>
+
 	<script type="text/javascript">
 	"use strict";
 
@@ -97,6 +99,7 @@
 		    
 		    $('.column').click(function(){
 		    	if (('#' + this.id) == superTile) {
+		    	$('#' + this.id).effect('shake', 100);
 		    	clearInterval(loopDelay1);
 		    	console.log(superTile);
 		    	chaseMole();
