--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Whack-A-Mole</title>
 	<link rel="stylesheet" type="text/css" href="/css/whack-a-mole.css">
+
+	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+
 	<style>
 
 		.container {
@@ -20,24 +23,27 @@
 	</style>
 </head>
 <body>
-	<div id="buttonContainer">
+	<div id="hansContainer">
+		<div id="title">Whack-A-Moleman!</div>
+	<img id="hans" src="/img/img_1334.png">
 	<button id="start">Start</button>
 	</div>
+	
 	<div class="container">
 		<div class="row">
-			<div id="one" class="column one-third overflow">Column</div>
-			<div id="two" class="column one-third">Column</div>
-			<div id="three" class="column one-third overflow">Column</div>
+			<div id="one" class="column one-third overflow"></div>
+			<div id="two" class="column one-third"></div>
+			<div id="three" class="column one-third overflow"></div>
 		</div>
 		<div class="row">
-			<div id="four" class="column one-third">Column</div>
-			<div id="five" class="column one-third">Column</div>
-			<div id="six" class="column one-third">Column</div>
+			<div id="four" class="column one-third"></div>
+			<div id="five" class="column one-third"></div>
+			<div id="six" class="column one-third"></div>
 		</div>
 		<div class="row">
-			<div id="seven" class="column one-third overflow">Column</div>
-			<div id="eight" class="column one-third">Column</div>
-			<div id="nine" class="column one-third overflow">Column</div>
+			<div id="seven" class="column one-third overflow"></div>
+			<div id="eight" class="column one-third"></div>
+			<div id="nine" class="column one-third overflow"></div>
 		</div>
 	</div>
 
@@ -51,7 +57,7 @@
 	var loopDelay1;
 
 		  function tileGenerator() {
-    		var tiles = ['one','two','three','four','five','six','seven','eight','nine'];
+    		var tiles = ['one','two','three','four','six','seven','eight','nine'];
     		var randomTile = tiles[Math.floor(Math.random() * tiles.length)];
     		return randomTile;
     		console.log(randomTile);
@@ -92,6 +98,7 @@
 
 
 		   $('#start').click(function(){
+		   		// $('#start').css(box-shadow, none);
                 startGame();
     		});
 
